k8s/gazebo/service-gazebo-ws.yaml
apiVersion: v1
kind: Service
metadata:
  name: gazebo-ws
  namespace: ros2-zenoh-gazebo
spec:
  selector:
    app: gazebo-sim
  ports:
    - port: 9002
      targetPort: 9002
      protocol: TCP
