k8s/gazebo/service-gzweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gzweb
  namespace: ros2-zenoh-gazebo
spec:
  selector:
    app: gzweb
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
