k8s/gazebo/service-zenoh-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: zenoh-router
  namespace: ros2-zenoh-gazebo
spec:
  selector:
    app: zenoh-router
  ports:
    - port: 7447
      targetPort: 7447
      protocol: TCP
