k8s/gazebo/route-gzweb.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gzweb
  namespace: ros2-zenoh-gazebo
spec:
  to:
    kind: Service
    name: gzweb
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
